@@ -416,3 +416,8 @@
 
         * Fix patch for edje draggable jump issue when external event
         area is used for the dragable.
+
+2012-07-12  Tom Hacohen (TAsn)
+
+	* Textblock: Fixed issue with updating only the font size using text
+	classes.
